[gd_scene load_steps=25 format=2]

[ext_resource path="res://GUI/ControlInterface/ControlInterface.gd" type="Script" id=1]
[ext_resource path="res://GUI/ControlInterface/LeftNormal.png" type="Texture" id=2]
[ext_resource path="res://GUI/ControlInterface/LeftPressed.png" type="Texture" id=3]
[ext_resource path="res://GUI/ControlInterface/ButtonAligner.gd" type="Script" id=4]
[ext_resource path="res://GUI/ControlInterface/RightNormal.png" type="Texture" id=5]
[ext_resource path="res://GUI/ControlInterface/RightPressed.png" type="Texture" id=6]
[ext_resource path="res://GUI/ControlInterface/ActionNormal.png" type="Texture" id=7]
[ext_resource path="res://GUI/ControlInterface/ActionPressed.png" type="Texture" id=8]
[ext_resource path="res://GUI/ControlInterface/JumpNormal.png" type="Texture" id=9]
[ext_resource path="res://GUI/ControlInterface/JumpPressed.png" type="Texture" id=10]
[ext_resource path="res://GUI/ControlInterface/InteractRoomNormal.png" type="Texture" id=11]
[ext_resource path="res://GUI/ControlInterface/InteractRoomPressed.png" type="Texture" id=12]
[ext_resource path="res://GUI/ControlInterface/HotkeyNormal.png" type="Texture" id=13]
[ext_resource path="res://GUI/ControlInterface/HotkeyPressed.png" type="Texture" id=14]
[ext_resource path="res://GUI/ControlInterface/SwitchHotkeyNormal.png" type="Texture" id=15]
[ext_resource path="res://GUI/ControlInterface/SwitchHotkeyPressed.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.88, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26, 20 )

[sub_resource type="CircleShape2D" id=5]
radius = 14.0

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.498039 ) ]
}

[node name="ControlInterface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Buttons" type="Control" parent="Control"]
modulate = Color( 1, 1, 1, 0.849412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BtnLeft" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 16, 192 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
shape = SubResource( 1 )
passby_press = true
action = "game_left"
visibility_mode = 1
script = ExtResource( 4 )

[node name="BtnRight" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 80, 192 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
shape = SubResource( 1 )
passby_press = true
action = "game_right"
visibility_mode = 1
script = ExtResource( 4 )

[node name="BtnAction" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 256, 192 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
shape = SubResource( 2 )
passby_press = true
action = "game_action"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnJump" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 320, 176 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
shape = SubResource( 3 )
passby_press = true
action = "game_jump"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnInteract" type="TouchScreenButton" parent="Control/Buttons"]
visible = false
position = Vector2( 80, 124 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
shape = SubResource( 4 )
action = "game_down"
visibility_mode = 1
script = ExtResource( 4 )

[node name="BtnHotkey1" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 200, 208 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "game_hotkey1"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnHotkey2" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 200, 160 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "game_hotkey2"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnHotkey3" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 240, 128 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "game_hotkey3"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnHotkey4" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 288, 128 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "game_hotkey4"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="BtnSwitchHotkey" type="TouchScreenButton" parent="Control/Buttons"]
position = Vector2( 336, 128 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )
shape = SubResource( 5 )
action = "game_sw_hotkey"
visibility_mode = 1
script = ExtResource( 4 )
align_target = 4

[node name="DimPlayer" type="AnimationPlayer" parent="."]
autoplay = "Auto_Dim_Control"
anims/Auto_Dim_Control = SubResource( 6 )

[node name="ShowHideGuiPlayer" type="AnimationPlayer" parent="."]
"anims/Hide Gui" = SubResource( 7 )
"anims/Show Gui" = SubResource( 8 )

